--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -2,3 +2,7 @@
     font-family: 'Montserrat';
     src: url('https://fonts.googleapis.com/css?family=Montserrat')
 }
+
+a:hover {
+    cursor: pointer;
+}
