--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -1,3 +1,7 @@
+html {
+    scroll-behavior: smooth;
+}
+
 @font-face{
     font-family: 'Montserrat';
     src: url('https://fonts.googleapis.com/css?family=Montserrat')
